bxslider flicker issue fixed: bxslider z-index greater than header

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -2,6 +2,10 @@ body {
   background-color: #99CC00;
 }
 
+header {
+  z-index: 99999;
+}
+
 /*NAV BAR*/
 
 .top-section {
